<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#121212"
    android:padding="16dp"
    android:gravity="center">

    <!-- Waga -->
    <EditText
        android:id="@+id/weightInput"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/weight_hint"
        android:inputType="numberDecimal"
        android:backgroundTint="#BB86FC"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:padding="16dp" />

    <!-- Wzrost -->
    <EditText
        android:id="@+id/heightInput"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/height_hint"
        android:inputType="numberDecimal"
        android:backgroundTint="#BB86FC"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:layout_marginTop="16dp"
        android:padding="16dp" />

    <!-- Wiek -->
    <EditText
        android:id="@+id/ageInput"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/age_hint"
        android:inputType="number"
        android:backgroundTint="#BB86FC"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:layout_marginTop="16dp"
        android:padding="16dp" />

    <!-- Poziom aktywności -->
    <EditText
        android:id="@+id/activityLevelInput"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/activity_level_hint"
        android:inputType="numberDecimal"
        android:backgroundTint="#BB86FC"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:layout_marginTop="16dp"
        android:padding="16dp" />

    <!-- Przycisk -->
    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/calculate_calorie_button"
        android:backgroundTint="#3700B3"
        android:textColor="#FFFFFF"
        android:layout_marginTop="16dp"
        android:padding="16dp" />

    <!-- Wynik -->
    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_calories"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="32dp"
        android:gravity="center" />

</LinearLayout>
